[package]
name = "board-manager"
version = "0.1.0"
edition = "2024"
description = "GitHub Projects v2 board manager with GraphQL"
authors = ["Andrew Altimit"]
license = "MIT"

[[bin]]
name = "board-manager"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# YAML parsing
serde_yaml = "0.9"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Regex for pattern matching
regex = "1.10"

# Lazy static for compile-time regex
lazy_static = "1.5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
